<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Register">
    <ImageView
        android:id="@+id/regresar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        android:layout_gravity="start"
        android:background="@drawable/circulos"
        android:contentDescription="@string/flecha" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:src="@drawable/arco"
        android:contentDescription="@string/arcofondo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcom_onboard"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_us_help_you_get_to_know_places_in_guatemala"
        android:textSize="10sp"
        android:textStyle="bold"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="350dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/forget"
        android:inputType="text"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/apellido"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/forget"
        android:hint="@string/last_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/correo"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/forget"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/nacionalidad"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/forget"
        android:hint="@string/nationality"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/numero"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/forget"
        android:hint="@string/phone_number"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/contra"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/forget"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/confcontra"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/forget"
        android:hint="@string/password_confirmation"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/register"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        app:backgroundTint="@null"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/newlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sing_in"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

</LinearLayout>