<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:src="@drawable/arco"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/arcofondo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        app:backgroundTint="@null"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="login"
        android:textColor="@color/black"
        android:layout_marginTop="40dp" />
    <Button
        android:id="@+id/register"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:backgroundTint="@null"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:onClick="register"/>


</LinearLayout>