<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Login">
    <ImageView
        android:id="@+id/regresar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        android:layout_gravity="start"
        android:background="@drawable/circulos"
        android:contentDescription="@string/flecha" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:src="@drawable/arco"
        android:contentDescription="@string/arcofondo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:letterSpacing="0.03" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/contra"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        app:backgroundTint="@null"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/newregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sing_up"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"/>
</LinearLayout>