<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_contorno">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/amarrillo"/>

        <RelativeLayout
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="-75dp"
            android:background="@drawable/ronud_back"
            android:padding="20dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rond_back_color"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:padding="25dp"
                android:src="@drawable/ic_person" />

        </RelativeLayout>

        <TextView
            android:id="@+id/mensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edtiar Perfil"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/forget"
            android:inputType="text"
            android:hint="@string/name"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/apellido"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/forget"
            android:hint="@string/last_name"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            />



        <EditText
            android:id="@+id/numero"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/forget"
            android:hint="@string/phone_number"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:inputType="number"/>


    </LinearLayout>

</RelativeLayout>